Alteração nos arquivos

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                     <div class='wave1'></div>
                   </div>
 
-            <footer class="Rodape"> Guided by: <span> @maykbrito</span><br>
-                Created by : <span> @arl.an</span></footer>
+            <footer class="Rodape"> Created by : <span> @arl.an</span> </footer>
+                
         </div>
 
     </body>
